# WscadTracer

./: .env  .replit  README.md  app.py  auth.py  database.py  erp_exporter.py  excel_processor.py  file_monitor.py  migrate_to_supabase.py  pyproject.toml  reset_db.py  utils.py  wscad_comparison.db
.streamlit/: config.toml
archived_files/: Karsilastirma_Raporu_20250502_142828.xlsx
attached_assets/: SIEMENS_CABINET_V2.xlsx  SIEMENS_CABINET_V2_copy.xlsx
