[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Wscad BOM izleme"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "watchdog>=6.0.0",
]
